feat: Enhance Sync ETA display mode
- Enhance block rate calculation with weighted averages(accounts for network flunctuations and sync speed of more recent blocks while calculating eta, basically giving us more accuracy)
- Add option to switch between ETA and blocks remaining display in display settings
- Add placeholder ETA while gathering block data

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -353,6 +353,7 @@
   "estimated": "مُقدَّر",
   "estimated_new_fee": "رسوم جديدة مقدرة",
   "estimated_receive_amount": "مقدرة المبلغ الاستقبال",
+  "eta": "إيتا",
   "etherscan_history": "Etherscan تاريخ",
   "event": "ﺙﺪﺣ",
   "events": "ﺙﺍﺪﺣﻷ﻿ﺍ",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "اختر ممثلًا جديدًا",
   "nanogpt_subtitle": "جميع النماذج الأحدث (GPT-4 ، Claude). \\ nno اشتراك ، ادفع مع Crypto.",
   "narrow": "ضيق",
-  "new_tag": "جديد",
   "new_first_wallet_text": "الحفاظ على سلامة التشفير الخاص بك هو قطعة من الكعكة",
   "new_node_testing": "تجربة العقدة الجديدة",
   "new_subaddress_create": "إنشاء",
   "new_subaddress_label_name": "تسمية",
   "new_subaddress_title": "عنوان جديد",
+  "new_tag": "جديد",
   "new_template": "قالب جديد",
   "new_transactions_notifications": "إرسال إشعارات حول المعاملات الجديدة",
   "new_wallet": "إنشاء محفظة جديدة",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "جاري محاولة المزامنة",
   "sync_status_connected": "متصل",
   "sync_status_connecting": "يتم التوصيل",
+  "sync_status_display_mode": "مزامنة عرض حالة",
+  "sync_status_display_mode_blocks": "إظهار الكتل المتبقية",
+  "sync_status_display_mode_eta": "تظهر ETA",
   "sync_status_failed_connect": "انقطع الاتصال",
   "sync_status_not_connected": "غير متصل",
   "sync_status_starting_scan": "بدء المسح الضوئي (من ${height})",
