--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -353,6 +353,7 @@
   "estimated": "Odhadováno",
   "estimated_new_fee": "Odhadovaný nový poplatek",
   "estimated_receive_amount": "Odhadovaná částka přijímání",
+  "eta": "ETA",
   "etherscan_history": "Historie Etherscanu",
   "event": "událost",
   "events": "Události",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Vyberte nového zástupce",
   "nanogpt_subtitle": "Všechny nejnovější modely (GPT-4, Claude). \\ Nno předplatné, plaťte krypto.",
   "narrow": "Úzký",
-  "new_tag": "Nový",
   "new_first_wallet_text": "Udržování svého kryptového v bezpečí je kus dortu",
   "new_node_testing": "Testování nového uzlu",
   "new_subaddress_create": "Vytvořit",
   "new_subaddress_label_name": "Popisek",
   "new_subaddress_title": "Nová adresa",
+  "new_tag": "Nový",
   "new_template": "Nová šablona",
   "new_transactions_notifications": "Zašlete oznámení o nových transakcích",
   "new_wallet": "Nová peněženka",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "ZAHAJUJI SYNCHR.",
   "sync_status_connected": "PŘIPOJENO",
   "sync_status_connecting": "PŘIPOJOVÁNÍ",
+  "sync_status_display_mode": "Synchronizace stavu stavu",
+  "sync_status_display_mode_blocks": "Zobrazit bloky zbývající",
+  "sync_status_display_mode_eta": "Ukažte ETA",
   "sync_status_failed_connect": "ODPOJENO",
   "sync_status_not_connected": "NEPŘIPOJENO",
   "sync_status_starting_scan": "Počáteční skenování (z ${height})",
