--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -353,6 +353,7 @@
   "estimated": "Geschätzt",
   "estimated_new_fee": "Geschätzte neue Gebühr",
   "estimated_receive_amount": "Geschätzter Empfangsbetrag",
+  "eta": "ETA",
   "etherscan_history": "Etherscan-Historie",
   "event": "Ereignis",
   "events": "Veranstaltungen",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Wählen Sie einen neuen Vertreter aus",
   "nanogpt_subtitle": "Alle neuesten Modelle (GPT-4, Claude).",
   "narrow": "Eng",
-  "new_tag": "Neu",
   "new_first_wallet_text": "Wenn Sie Ihren Krypto schützen, ist ein Kinderspiel",
   "new_node_testing": "Neuen Knoten testen",
   "new_subaddress_create": "Erstellen",
   "new_subaddress_label_name": "Bezeichnung",
   "new_subaddress_title": "Neue Adresse",
+  "new_tag": "Neu",
   "new_template": "neue Vorlage",
   "new_transactions_notifications": "Senden Sie Benachrichtigungen über neue Transaktionen",
   "new_wallet": "Neue Wallet",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "SYNC VERSUCHEN",
   "sync_status_connected": "VERBUNDEN",
   "sync_status_connecting": "VERBINDEN",
+  "sync_status_display_mode": "Synchronisationsstatusanzeige",
+  "sync_status_display_mode_blocks": "Blöcke verbleibend zeigen",
+  "sync_status_display_mode_eta": "Zeigen ETA",
   "sync_status_failed_connect": "GETRENNT",
   "sync_status_not_connected": "NICHT VERBUNDEN",
   "sync_status_starting_scan": "SCAN starten (von ${height})",
