--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -353,6 +353,7 @@
   "estimated": "Estimated",
   "estimated_new_fee": "Estimated new fee",
   "estimated_receive_amount": "Estimated receive amount",
+  "eta": "ETA",
   "etherscan_history": "Etherscan history",
   "event": "Event",
   "events": "Events",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Pick a new representative",
   "nanogpt_subtitle": "All the newest models (GPT-4, Claude).\\nNo subscription, pay with crypto.",
   "narrow": "Narrow",
-  "new_tag": "New",
   "new_first_wallet_text": "Keeping your crypto safe is a piece of cake",
   "new_node_testing": "New node testing",
   "new_subaddress_create": "Create",
   "new_subaddress_label_name": "Label name",
   "new_subaddress_title": "New address",
+  "new_tag": "New",
   "new_template": "New Template",
   "new_transactions_notifications": "Send notifications about new transactions",
   "new_wallet": "New Wallet",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "ATTEMPTING SYNC",
   "sync_status_connected": "CONNECTED",
   "sync_status_connecting": "CONNECTING",
+  "sync_status_display_mode": "Sync Status Display",
+  "sync_status_display_mode_blocks": "Show Blocks Remaining",
+  "sync_status_display_mode_eta": "Show ETA",
   "sync_status_failed_connect": "DISCONNECTED",
   "sync_status_not_connected": "NOT CONNECTED",
   "sync_status_starting_scan": "STARTING SCAN (from ${height})",
