--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -353,6 +353,7 @@
   "estimated": "Estimé",
   "estimated_new_fee": "De nouveaux frais estimés",
   "estimated_receive_amount": "Recevoir estimé le montant",
+  "eta": "ETA",
   "etherscan_history": "Historique Etherscan",
   "event": "Événement",
   "events": "Événements",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Choisissez un nouveau représentant",
   "nanogpt_subtitle": "Tous les modèles les plus récents (GPT-4, Claude).\nPas d'abonnement, payez avec vos crypto-monnaies.",
   "narrow": "Rédruit",
-  "new_tag": "Nouveau",
   "new_first_wallet_text": "Garder vos crypto-monnaies en sécurité est un jeu d'enfant.",
   "new_node_testing": "Test du nouveau nœud",
   "new_subaddress_create": "Créer",
   "new_subaddress_label_name": "Nom",
   "new_subaddress_title": "Nouvelle adresse",
+  "new_tag": "Nouveau",
   "new_template": "Nouveau Modèle",
   "new_transactions_notifications": "Envoyer des notifications sur les nouvelles transactions",
   "new_wallet": "Nouveau Portefeuille (Wallet)",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "TENTATIVE DE SYNCHRONISATION",
   "sync_status_connected": "CONNECTÉ",
   "sync_status_connecting": "CONNEXION EN COURS",
+  "sync_status_display_mode": "Affichage de l'état de synchronisation",
+  "sync_status_display_mode_blocks": "Afficher les blocs restants",
+  "sync_status_display_mode_eta": "Show Eta",
   "sync_status_failed_connect": "DÉCONNECTÉ",
   "sync_status_not_connected": "NON CONNECTÉ",
   "sync_status_starting_scan": "Démarrer la numérisation (à partir de ${height})",
