--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -353,6 +353,7 @@
   "estimated": "Kiyasta",
   "estimated_new_fee": "An kiyasta sabon kudin",
   "estimated_receive_amount": "Kiyasta samun adadin",
+  "eta": "Tsire-tsire",
   "etherscan_history": "Etherscan tarihin kowane zamani",
   "event": "Lamarin",
   "events": "Abubuwan da suka faru",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Dauki sabon wakili",
   "nanogpt_subtitle": "Duk sabbin samfuran (GPT-4, CLODE). \\ NNO biyan kuɗi, biya tare da crypto.",
   "narrow": "kunkuntar",
-  "new_tag": "Sabo",
   "new_first_wallet_text": "Tsayawa kayatar da lafiya",
   "new_node_testing": "Sabbin gwajin kumburi",
   "new_subaddress_create": "Ƙirƙiri",
   "new_subaddress_label_name": "Lakabin suna",
   "new_subaddress_title": "Adireshin sabuwa",
+  "new_tag": "Sabo",
   "new_template": "Sabon Samfura",
   "new_transactions_notifications": "Aika sanarwa game da sababbin ma'amaloli",
   "new_wallet": "Sabuwar Wallet",
@@ -909,6 +910,9 @@
   "sync_status_attempting_sync": "KWAFI",
   "sync_status_connected": "HANNU",
   "sync_status_connecting": "HADA",
+  "sync_status_display_mode": "Nunin halin Setc",
+  "sync_status_display_mode_blocks": "Nuna shinge da sauran",
+  "sync_status_display_mode_eta": "Nuna ETA",
   "sync_status_failed_connect": "BABU INTERNET",
   "sync_status_not_connected": "BABU INTERNET",
   "sync_status_starting_scan": "Farawa Scan (daga ${height})",
