--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -353,6 +353,7 @@
   "estimated": "अनुमानित",
   "estimated_new_fee": "अनुमानित नया शुल्क",
   "estimated_receive_amount": "अनुमानित राशि",
+  "eta": "ईटा",
   "etherscan_history": "इथरस्कैन इतिहास",
   "event": "आयोजन",
   "events": "आयोजन",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "एक नया प्रतिनिधि चुनें",
   "nanogpt_subtitle": "सभी नवीनतम मॉडल (GPT-4, क्लाउड)। \\ nno सदस्यता, क्रिप्टो के साथ भुगतान करें।",
   "narrow": "सँकरा",
-  "new_tag": "नया",
   "new_first_wallet_text": "अपने क्रिप्टो को सुरक्षित रखना केक का एक टुकड़ा है",
   "new_node_testing": "नई नोड परीक्षण",
   "new_subaddress_create": "सर्जन करना",
   "new_subaddress_label_name": "लेबल का नाम",
   "new_subaddress_title": "नया पता",
+  "new_tag": "नया",
   "new_template": "नया टेम्पलेट",
   "new_transactions_notifications": "नए लेनदेन के बारे में सूचनाएं भेजें",
   "new_wallet": "नया बटुआ",
@@ -909,6 +910,9 @@
   "sync_status_attempting_sync": "सिंक करने का प्रयास",
   "sync_status_connected": "जुड़े हुए",
   "sync_status_connecting": "कनेक्ट",
+  "sync_status_display_mode": "सिंक स्थिति प्रदर्शन",
+  "sync_status_display_mode_blocks": "शेष ब्लॉक दिखाएं",
+  "sync_status_display_mode_eta": "शो एटा",
   "sync_status_failed_connect": "डिस्कनेक्ट किया गया",
   "sync_status_not_connected": "जुड़े नहीं हैं",
   "sync_status_starting_scan": "स्कैन शुरू करना (${height} से)",
