--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -353,6 +353,7 @@
   "estimated": "procijenjen",
   "estimated_new_fee": "Procijenjena nova naknada",
   "estimated_receive_amount": "Procijenjeni iznos primanja",
+  "eta": "Eta",
   "etherscan_history": "Etherscan povijest",
   "event": "Događaj",
   "events": "Događaji",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Odaberite novog predstavnika",
   "nanogpt_subtitle": "Svi najnoviji modeli (GPT-4, Claude). \\ NNO pretplata, plaćajte kripto.",
   "narrow": "Usko",
-  "new_tag": "Novi",
   "new_first_wallet_text": "Čuvanje kriptovaluta je komad torte",
   "new_node_testing": "Provjera novog nodea",
   "new_subaddress_create": "Izradi",
   "new_subaddress_label_name": "Oznaka",
   "new_subaddress_title": "Nova adresa",
+  "new_tag": "Novi",
   "new_template": "novi predložak",
   "new_transactions_notifications": "Pošaljite obavijesti o novim transakcijama",
   "new_wallet": "Novi novčanik",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "POKUŠAJ SINKRONIZACIJE",
   "sync_status_connected": "SPOJENO",
   "sync_status_connecting": "SPAJANJE",
+  "sync_status_display_mode": "Sinkronizirani prikaz statusa",
+  "sync_status_display_mode_blocks": "Prikažite preostale blokove",
+  "sync_status_display_mode_eta": "Pokazati eta",
   "sync_status_failed_connect": "ISKLJUČENO",
   "sync_status_not_connected": "NIJE POVEZANO",
   "sync_status_starting_scan": "Početno skeniranje (od ${height})",
