--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -353,6 +353,7 @@
   "estimated": "Stimato",
   "estimated_new_fee": "Nuova commissione stimata",
   "estimated_receive_amount": "Importo di ricezione stimato",
+  "eta": "Eta",
   "etherscan_history": "Cronologia Etherscan",
   "event": "Evento",
   "events": "Eventi",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Scegli un nuovo rappresentante",
   "nanogpt_subtitle": "Tutti i modelli più recenti (GPT-4, Claude). Nessun abbonamento, paga con cripto.",
   "narrow": "Stretto",
-  "new_tag": "Nuovo",
   "new_first_wallet_text": "Mantenere la tua criptovaluta è un gioco da ragazzi",
   "new_node_testing": "Test novo nodo",
   "new_subaddress_create": "Crea",
   "new_subaddress_label_name": "Nome etichetta",
   "new_subaddress_title": "Nuovo indirizzo",
+  "new_tag": "Nuovo",
   "new_template": "Nuovo modello",
   "new_transactions_notifications": "Invia notifiche su nuove transazioni",
   "new_wallet": "Nuovo portafoglio",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "TENTATIVO DI SINCRONIZZAZIONE",
   "sync_status_connected": "CONNESSO",
   "sync_status_connecting": "CONNESSIONE",
+  "sync_status_display_mode": "Visualizzazione dello stato di sincronizzazione",
+  "sync_status_display_mode_blocks": "Mostra blocchi rimanenti",
+  "sync_status_display_mode_eta": "Mostra eta",
   "sync_status_failed_connect": "DISCONNESSO",
   "sync_status_not_connected": "NON CONNESSO",
   "sync_status_starting_scan": "AVVIO SCANSIONE (da ${height})",
