--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -353,6 +353,7 @@
   "estimated": "推定",
   "estimated_new_fee": "推定新しい料金",
   "estimated_receive_amount": "推定受信金額",
+  "eta": "ETA",
   "etherscan_history": "イーサスキャンの歴史",
   "event": "イベント",
   "events": "イベント",
@@ -523,12 +524,12 @@
   "nano_pick_new_rep": "新しい代表者を選びます",
   "nanogpt_subtitle": "すべての最新モデル（GPT-4、Claude）。\\ nnoサブスクリプション、暗号で支払います。",
   "narrow": "狭い",
-  "new_tag": "新しい",
   "new_first_wallet_text": "暗号を安全に保つことはケーキです",
   "new_node_testing": "新しいノードのテスト",
   "new_subaddress_create": "作成する",
   "new_subaddress_label_name": "ラベル名",
   "new_subaddress_title": "新しいアドレス",
+  "new_tag": "新しい",
   "new_template": "新しいテンプレート",
   "new_transactions_notifications": "新しいトランザクションに関する通知を送信します",
   "new_wallet": "新しいウォレット",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "同期を試みています",
   "sync_status_connected": "接続済み",
   "sync_status_connecting": "接続中",
+  "sync_status_display_mode": "ステータス表示を同期します",
+  "sync_status_display_mode_blocks": "残りのブロックを表示します",
+  "sync_status_display_mode_eta": "ETAを表示します",
   "sync_status_failed_connect": "切断されました",
   "sync_status_not_connected": "接続されていません",
   "sync_status_starting_scan": "スキャンを開始する（${height} から）",
