--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -353,6 +353,7 @@
   "estimated": "예상",
   "estimated_new_fee": "예상 새 수수료",
   "estimated_receive_amount": "예상 수령 금액",
+  "eta": "에타",
   "etherscan_history": "Etherscan 내역",
   "event": "이벤트",
   "events": "이벤트",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "새 대표자 선택",
   "nanogpt_subtitle": "모든 최신 모델 (GPT-4, Claude).\n구독 없이 암호화폐로 결제.",
   "narrow": "좁게",
-  "new_tag": "새로운",
   "new_first_wallet_text": "암호화폐를 안전하게 보관하는 것은 식은 죽 먹기",
   "new_node_testing": "새 노드 테스트 중",
   "new_subaddress_create": "생성",
   "new_subaddress_label_name": "라벨 이름",
   "new_subaddress_title": "새 주소",
+  "new_tag": "새로운",
   "new_template": "새 템플릿",
   "new_transactions_notifications": "새 트랜잭션 알림 보내기",
   "new_wallet": "새 지갑",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "동기화 시도 중",
   "sync_status_connected": "연결됨",
   "sync_status_connecting": "연결 중",
+  "sync_status_display_mode": "동기화 상태 표시",
+  "sync_status_display_mode_blocks": "남은 블록을 보여줍니다",
+  "sync_status_display_mode_eta": "ETA를 보여주십시오",
   "sync_status_failed_connect": "연결 끊김",
   "sync_status_not_connected": "연결되지 않음",
   "sync_status_starting_scan": "스캔 시작 중 (${height}부터)",
