--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -353,6 +353,7 @@
   "estimated": "ခန့်မှန်း",
   "estimated_new_fee": "ခန့်မှန်းသစ်ခန့်မှန်း",
   "estimated_receive_amount": "ခန့်မှန်းရရှိသောပမာဏ",
+  "eta": "eta",
   "etherscan_history": "Etherscan သမိုင်း",
   "event": "ပွဲ",
   "events": "အဲ့ဒါနဲ့",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "အသစ်တစ်ခုကိုရွေးပါ",
   "nanogpt_subtitle": "အားလုံးနောက်ဆုံးပေါ်မော်ဒယ်များ (GPT-4, Claude) ။ \\ nno subscription, crypto နှင့်အတူပေးဆောင်။",
   "narrow": "ကျဉ်းသော",
-  "new_tag": "သစ်သော",
   "new_first_wallet_text": "သင်၏ Crypto Safe ကိုလုံခြုံအောင်ပြုလုပ်ခြင်းသည်ကိတ်မုန့်တစ်မျိုးဖြစ်သည်",
   "new_node_testing": "နှာခေါင်း အသစ်စမ်းသပ်ခြင်း။",
   "new_subaddress_create": "ဖန်တီးပါ။",
   "new_subaddress_label_name": "အညွှန်းအမည်",
   "new_subaddress_title": "လိပ်စာအသစ်",
+  "new_tag": "သစ်သော",
   "new_template": "ပုံစံအသစ်",
   "new_transactions_notifications": "အသစ်သောအရောင်းအဝယ်အကြောင်းသတိပေးချက်များပေးပို့ပါ",
   "new_wallet": "ပိုက်ဆံအိတ်အသစ်",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "ချိန်ကိုက်ခြင်းကို ကြိုးစားနေသည်။",
   "sync_status_connected": "ချိတ်ဆက်ထားသည်။",
   "sync_status_connecting": "ချိတ်ဆက်ခြင်း။",
+  "sync_status_display_mode": "Sync status display ကို",
+  "sync_status_display_mode_blocks": "ကျန်ရှိနေသေးသောလုပ်ကွက်များကိုပြပါ",
+  "sync_status_display_mode_eta": "Eta ကိုပြပါ",
   "sync_status_failed_connect": "အဆက်အသွယ်ဖြတ်ထားသည်။",
   "sync_status_not_connected": "မချိတ်ဆက်ပါ။",
   "sync_status_starting_scan": "စကင်ဖတ်စစ်ဆေးမှုစတင်ခြင်း (${height})",
