--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -353,6 +353,7 @@
   "estimated": "Oszacowano",
   "estimated_new_fee": "Szacowana nowa opłata",
   "estimated_receive_amount": "Szacowana kwota otrzymania",
+  "eta": "Eta",
   "etherscan_history": "Historia Etherscanu",
   "event": "Wydarzenie",
   "events": "Wydarzenia",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Wybierz nowego przedstawiciela",
   "nanogpt_subtitle": "Wszystkie najnowsze modele (GPT-4, Claude). \\ Nno subskrypcja, płacą za pomocą kryptografii.",
   "narrow": "Wąski",
-  "new_tag": "Nowy",
   "new_first_wallet_text": "Zachowanie bezpieczeństwa kryptograficznego jest kawałkiem ciasta",
   "new_node_testing": "Testowanie nowych węzłów",
   "new_subaddress_create": "Stwórz",
   "new_subaddress_label_name": "Etykieta nazwy adresu",
   "new_subaddress_title": "Nowy adres",
+  "new_tag": "Nowy",
   "new_template": "Nowy szablon",
   "new_transactions_notifications": "Wyślij powiadomienia o nowych transakcjach",
   "new_wallet": "Nowy portfel",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "PRÓBA SYNCHRONIZACJI",
   "sync_status_connected": "POŁĄCZONY",
   "sync_status_connecting": "ŁĄCZENIE",
+  "sync_status_display_mode": "Wyświetlanie statusu synchronizacji",
+  "sync_status_display_mode_blocks": "Pokaż pozostałe bloki",
+  "sync_status_display_mode_eta": "Pokaż eta",
   "sync_status_failed_connect": "POŁĄCZENIE NIEUDANE",
   "sync_status_not_connected": "NIE POŁĄCZONY",
   "sync_status_starting_scan": "Rozpoczęcie skanowania (od ${height})",
