--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -353,6 +353,7 @@
   "estimated": "Estimado",
   "estimated_new_fee": "Nova taxa estimada",
   "estimated_receive_amount": "Valor estimado de recebimento",
+  "eta": "ETA",
   "etherscan_history": "história Etherscan",
   "event": "Evento",
   "events": "Eventos",
@@ -523,12 +524,12 @@
   "nano_pick_new_rep": "Escolha um novo representante",
   "nanogpt_subtitle": "Todos os modelos mais recentes (GPT-4, Claude). \\nSem assinatura, pague com criptomoeda.",
   "narrow": "Estreito",
-  "new_tag": "Novo",
   "new_first_wallet_text": "Manter sua cripto segura é um pedaço de bolo",
   "new_node_testing": "Teste de novo nó",
   "new_subaddress_create": "Criar",
   "new_subaddress_label_name": "Nome",
   "new_subaddress_title": "Novo endereço",
+  "new_tag": "Novo",
   "new_template": "Novo modelo",
   "new_transactions_notifications": "Envie notificações sobre novas transações",
   "new_wallet": "Nova carteira",
@@ -909,6 +910,9 @@
   "sync_status_attempting_sync": "TENTANDO SINCRONIZAR",
   "sync_status_connected": "CONECTADO",
   "sync_status_connecting": "CONECTANDO",
+  "sync_status_display_mode": "Exibição de status de sincronização",
+  "sync_status_display_mode_blocks": "Mostre blocos restantes",
+  "sync_status_display_mode_eta": "Mostre ETA",
   "sync_status_failed_connect": "DESCONECTADO",
   "sync_status_not_connected": "DESCONECTADO",
   "sync_status_starting_scan": "Começando scan (de ${height})",
