--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -353,6 +353,7 @@
   "estimated": "Примерно",
   "estimated_new_fee": "Расчетная новая плата",
   "estimated_receive_amount": "Расчетная сумма получения",
+  "eta": "ETA",
   "etherscan_history": "История Эфириума",
   "event": "Событие",
   "events": "События",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Выберите нового представителя",
   "nanogpt_subtitle": "Все новейшие модели (GPT-4, Claude). \\ Nno Подписка, платите с крипто.",
   "narrow": "Узкий",
-  "new_tag": "Новый",
   "new_first_wallet_text": "Сохранение вашего криптографии - это кусок торта",
   "new_node_testing": "Тестирование новой ноды",
   "new_subaddress_create": "Создать",
   "new_subaddress_label_name": "Имя",
   "new_subaddress_title": "Новый адрес",
+  "new_tag": "Новый",
   "new_template": "Новый шаблон",
   "new_transactions_notifications": "Отправить уведомления о новых транзакциях",
   "new_wallet": "Новый кошелёк",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "ПОПЫТКА СИНХРОНИЗАЦИИ",
   "sync_status_connected": "ПОДКЛЮЧЕНО",
   "sync_status_connecting": "ПОДКЛЮЧЕНИЕ",
+  "sync_status_display_mode": "Отображение статуса синхронизации",
+  "sync_status_display_mode_blocks": "Показать оставшиеся блоки",
+  "sync_status_display_mode_eta": "Показать ETA",
   "sync_status_failed_connect": "ОТКЛЮЧЕНО",
   "sync_status_not_connected": "НЕ ПОДКЛЮЧЁН",
   "sync_status_starting_scan": "Начальное сканирование (от ${height})",
