--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -353,6 +353,7 @@
   "estimated": "Tahmini",
   "estimated_new_fee": "Tahmini yeni ücret",
   "estimated_receive_amount": "Tahmini alma miktarı",
+  "eta": "ETA",
   "etherscan_history": "Etherscan geçmişi",
   "event": "Etkinlik",
   "events": "Olaylar",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Yeni bir temsilci seçin",
   "nanogpt_subtitle": "En yeni modeller (GPT-4, Claude). \\ Nno aboneliği, kripto ile ödeme yapın.",
   "narrow": "Dar",
-  "new_tag": "Yeni",
   "new_first_wallet_text": "Kripto'nuzu güvende tutmak bir parça kek",
   "new_node_testing": "Yeni düğüm test ediliyor",
   "new_subaddress_create": "Oluştur",
   "new_subaddress_label_name": "Etiket ismi",
   "new_subaddress_title": "Yeni adres",
+  "new_tag": "Yeni",
   "new_template": "Yeni Şablon",
   "new_transactions_notifications": "Yeni işlemler hakkında bildirimler gönderin",
   "new_wallet": "Yeni Cüzdan",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "SENKRONİZE EDİLMEYE ÇALIŞILIYOR",
   "sync_status_connected": "BAĞLANILDI",
   "sync_status_connecting": "BAĞLANILIYOR",
+  "sync_status_display_mode": "Senkronizasyon Durum Ekranı",
+  "sync_status_display_mode_blocks": "Kalan blokları göster",
+  "sync_status_display_mode_eta": "ETA'yı Göster",
   "sync_status_failed_connect": "BAĞLANTI KESİLDİ",
   "sync_status_not_connected": "BAĞLI DEĞİL",
   "sync_status_starting_scan": "Başlangıç ​​taraması (${height})",
