--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -353,6 +353,7 @@
   "estimated": "Приблизно ",
   "estimated_new_fee": "Орієнтовна нова комісія",
   "estimated_receive_amount": "Орієнтовна сума отримує",
+  "eta": "ETA",
   "etherscan_history": "Історія Etherscan",
   "event": "Подія",
   "events": "Події",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Виберіть нового представника",
   "nanogpt_subtitle": "Усі найновіші моделі (GPT-4, Claude). \\ Nno підписка, оплата криптовалютою.",
   "narrow": "вузькі",
-  "new_tag": "Новачок",
   "new_first_wallet_text": "Зберігання вашої криптовалюти це просто як шматок торта",
   "new_node_testing": "Тестування нового вузла",
   "new_subaddress_create": "Створити",
   "new_subaddress_label_name": "Ім'я",
   "new_subaddress_title": "Нова адреса",
+  "new_tag": "Новачок",
   "new_template": "Новий шаблон",
   "new_transactions_notifications": "Надішліть сповіщення про нові транзакції",
   "new_wallet": "Новий гаманець",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "СПРОБА СИНХРОНІЗАЦІЇ",
   "sync_status_connected": "ПІДКЛЮЧЕНО",
   "sync_status_connecting": "ПІДКЛЮЧЕННЯ",
+  "sync_status_display_mode": "Дисплей стану синхронізації",
+  "sync_status_display_mode_blocks": "Показати блоки, що залишилися",
+  "sync_status_display_mode_eta": "Шоу ETA",
   "sync_status_failed_connect": "ВІДКЛЮЧЕНО",
   "sync_status_not_connected": "НЕ ПІДКЛЮЧЕННИЙ",
   "sync_status_starting_scan": "Початок сканування (від ${height})",
