--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -353,6 +353,7 @@
   "estimated": "تخمینہ لگایا",
   "estimated_new_fee": "تخمینہ شدہ نئی فیس",
   "estimated_receive_amount": "تخمینہ وصول کی رقم",
+  "eta": "ETA",
   "etherscan_history": "ﺦﯾﺭﺎﺗ ﯽﮐ ﻦﯿﮑﺳﺍ ﺮﮭﺘﯾﺍ",
   "event": "ﺐﯾﺮﻘﺗ",
   "events": "ﺕﺎﺒﯾﺮﻘﺗ",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "ایک نیا نمائندہ منتخب کریں",
   "nanogpt_subtitle": "تمام تازہ ترین ماڈل (GPT-4 ، کلاڈ)۔ n n no سبسکرپشن ، کریپٹو کے ساتھ ادائیگی کریں۔",
   "narrow": "تنگ",
-  "new_tag": "نیا",
   "new_first_wallet_text": "اپنے کریپٹو کو محفوظ رکھنا کیک کا ایک ٹکڑا ہے",
   "new_node_testing": "نیا نوڈ ٹیسٹنگ",
   "new_subaddress_create": "بنانا",
   "new_subaddress_label_name": "لیبل کا نام",
   "new_subaddress_title": "نیا پتہ",
+  "new_tag": "نیا",
   "new_template": "نیا سانچہ",
   "new_transactions_notifications": "نئے لین دین کے بارے میں اطلاعات بھیجیں",
   "new_wallet": "نیا پرس",
@@ -909,6 +910,9 @@
   "sync_status_attempting_sync": "ہم آہنگی کی کوشش کر رہا ہے۔",
   "sync_status_connected": "منسلک",
   "sync_status_connecting": "جڑ رہا ہے۔",
+  "sync_status_display_mode": "مطابقت پذیری کی حیثیت ڈسپلے",
+  "sync_status_display_mode_blocks": "باقی بلاکس دکھائیں",
+  "sync_status_display_mode_eta": "ETA دکھائیں",
   "sync_status_failed_connect": "منقطع",
   "sync_status_not_connected": "منسلک نہیں",
   "sync_status_starting_scan": "اسکین شروع کرنا (${height})",
