--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -353,6 +353,7 @@
   "estimated": "估计值",
   "estimated_new_fee": "估计新费用",
   "estimated_receive_amount": "估计接收金额",
+  "eta": "ETA",
   "etherscan_history": "以太扫描历史",
   "event": "事件",
   "events": "活动",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "选择新代表",
   "nanogpt_subtitle": "所有最新型号（GPT-4，Claude）。\\ nno订阅，用加密货币付款。",
   "narrow": "狭窄的",
-  "new_tag": "新的",
   "new_first_wallet_text": "保持加密货币是一件小菜一碟",
   "new_node_testing": "新节点测试",
   "new_subaddress_create": "创建",
   "new_subaddress_label_name": "标签名称",
   "new_subaddress_title": "新地址",
+  "new_tag": "新的",
   "new_template": "新模板",
   "new_transactions_notifications": "发送有关新交易的通知",
   "new_wallet": "新钱包",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "嘗試同步",
   "sync_status_connected": "已连接",
   "sync_status_connecting": "连接中",
+  "sync_status_display_mode": "同步状态显示",
+  "sync_status_display_mode_blocks": "剩下的显示块",
+  "sync_status_display_mode_eta": "显示ETA",
   "sync_status_failed_connect": "断线",
   "sync_status_not_connected": "未连接",
   "sync_status_starting_scan": "启动扫描（来自 ${height}）",
