--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -353,6 +353,7 @@
   "estimated": "Изчислено",
   "estimated_new_fee": "Прогнозна нова такса",
   "estimated_receive_amount": "Прогнозна сума за получаване",
+  "eta": "Ета",
   "etherscan_history": "История на Etherscan",
   "event": "Събитие",
   "events": "събития",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Изберете нов представител",
   "nanogpt_subtitle": "Всички най-нови модели (GPT-4, Claude). \\ Nno абонамент, платете с Crypto.",
   "narrow": "Тесен",
-  "new_tag": "Ново",
   "new_first_wallet_text": "Запазването на криптовалутата ви е парче торта",
   "new_node_testing": "Тестване на нов node",
   "new_subaddress_create": "Създаване",
   "new_subaddress_label_name": "Име на Label",
   "new_subaddress_title": "Нов адрес",
+  "new_tag": "Ново",
   "new_template": "Нов шаблон",
   "new_transactions_notifications": "Изпратете известия за нови транзакции",
   "new_wallet": "Нов портфейл",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "ОПИТ ЗА СИНХРОНИЗАЦИЯ",
   "sync_status_connected": "СВЪРЗВАНЕ",
   "sync_status_connecting": "СВЪРЗВАНЕ",
+  "sync_status_display_mode": "Дисплей на състоянието на синхронизиране",
+  "sync_status_display_mode_blocks": "Покажете останали блокове",
+  "sync_status_display_mode_eta": "Покажи ETA",
   "sync_status_failed_connect": "НЕУСПЕШНО СВЪРЗВАНЕ",
   "sync_status_not_connected": "НЯМА ВРЪЗКА",
   "sync_status_starting_scan": "Стартиране на сканиране (от ${height})",
