--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -353,6 +353,7 @@
   "estimated": "Estimado",
   "estimated_new_fee": "Nueva tarifa estimada",
   "estimated_receive_amount": "Cantidad de recepción estimada",
+  "eta": "ETA",
   "etherscan_history": "historia de etherscan",
   "event": "Evento",
   "events": "Eventos",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Elija un nuevo representante",
   "nanogpt_subtitle": "Todos los modelos más nuevos (GPT-4, Claude). \\nSin suscripción, pague con cripto.",
   "narrow": "Angosto",
-  "new_tag": "Nuevo",
   "new_first_wallet_text": "Mantener su criptografía a salvo es un pedazo de pastel",
   "new_node_testing": "Prueba nuevos nodos",
   "new_subaddress_create": "Crear",
   "new_subaddress_label_name": "Nombre de etiqueta",
   "new_subaddress_title": "Nueva direccion",
+  "new_tag": "Nuevo",
   "new_template": "Nueva plantilla",
   "new_transactions_notifications": "Enviar notificaciones sobre nuevas transacciones",
   "new_wallet": "Nueva billetera",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "INTENTAR SINCRONIZAR",
   "sync_status_connected": "CONECTADO",
   "sync_status_connecting": "CONECTANDO",
+  "sync_status_display_mode": "Pantalla de estado de sincronización",
+  "sync_status_display_mode_blocks": "Mostrar bloques restantes",
+  "sync_status_display_mode_eta": "Mostrar ETA",
   "sync_status_failed_connect": "DESCONECTADO",
   "sync_status_not_connected": "NO CONECTADO",
   "sync_status_starting_scan": "Iniciar escaneo (de ${height})",
