--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -353,6 +353,7 @@
   "estimated": "Գնահատված",
   "estimated_new_fee": "Գնահատված նոր միջնորդավճար",
   "estimated_receive_amount": "Գնահատված ստացված գումար",
+  "eta": "Eta",
   "etherscan_history": "Etherscan պատմություն",
   "event": "Իրադարձություն",
   "events": "Իրադարձություններ",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Ընտրեք նոր ներկայացուցիչ",
   "nanogpt_subtitle": "Բոլոր ամենանոր մոդելներ (GPT-4, Claude).\\nԱռանց բաժանորդագրության, վճարեք կրիպտոարժույթով",
   "narrow": "Նեղ",
-  "new_tag": "Նոր",
   "new_first_wallet_text": "Ձեր ծպտյալ անվտանգ պահելը տորթի մի կտոր է",
   "new_node_testing": "Նոր հանգույցի փորձարկում",
   "new_subaddress_create": "Ստեղծել",
   "new_subaddress_label_name": "Պիտակի անուն",
   "new_subaddress_title": "Նոր հասցե",
+  "new_tag": "Նոր",
   "new_template": "Նոր նմուշ",
   "new_transactions_notifications": "Ուղարկեք ծանուցումներ նոր գործարքների վերաբերյալ",
   "new_wallet": "Նոր դրամապանակ",
@@ -905,6 +906,9 @@
   "sync_status_attempting_sync": "ՀԱՄԱԺԱՄԵՑՄԱՆ ՓՈՐՁ",
   "sync_status_connected": "ՄԻԱՑՎԱԾԷ",
   "sync_status_connecting": "ՄԻԱՑՎՈՒՄ Է",
+  "sync_status_display_mode": "Sync կարգավիճակի ցուցադրում",
+  "sync_status_display_mode_blocks": "Show ուցադրել բլոկները",
+  "sync_status_display_mode_eta": "Show ուցադրել ETA",
   "sync_status_failed_connect": "ՉՄԻԱՑԱՎ",
   "sync_status_not_connected": "ՄԻԱՑՎԱԾ ՉԷ",
   "sync_status_starting_scan": "Սկսած սկան (${height})",
