--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -353,6 +353,7 @@
   "estimated": "Diperkirakan",
   "estimated_new_fee": "Perkiraan biaya baru",
   "estimated_receive_amount": "Diperkirakan jumlah menerima",
+  "eta": "Eta",
   "etherscan_history": "Sejarah Etherscan",
   "event": "Peristiwa",
   "events": "Acara",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Pilih perwakilan baru",
   "nanogpt_subtitle": "Semua model terbaru (GPT-4, Claude). \\ Nno langganan, bayar dengan crypto.",
   "narrow": "Sempit",
-  "new_tag": "Baru",
   "new_first_wallet_text": "Menjaga crypto Anda aman adalah sepotong kue",
   "new_node_testing": "Pengujian node baru",
   "new_subaddress_create": "Buat",
   "new_subaddress_label_name": "Nama label",
   "new_subaddress_title": "Alamat baru",
+  "new_tag": "Baru",
   "new_template": "Template Baru",
   "new_transactions_notifications": "Kirim pemberitahuan tentang transaksi baru",
   "new_wallet": "Dompet Baru",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "MENCOBA SINKRONISASI",
   "sync_status_connected": "TERHUBUNG",
   "sync_status_connecting": "MENGHUBUNGKAN",
+  "sync_status_display_mode": "Tampilan Status Sinkronisasi",
+  "sync_status_display_mode_blocks": "Tampilkan blok tersisa",
+  "sync_status_display_mode_eta": "Tunjukkan eta",
   "sync_status_failed_connect": "GAGAL TERHUBUNG",
   "sync_status_not_connected": "TIDAK TERHUBUNG",
   "sync_status_starting_scan": "Mulai pemindaian (dari ${height})",
