--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -353,6 +353,7 @@
   "estimated": "Geschatte",
   "estimated_new_fee": "Geschatte nieuwe vergoeding",
   "estimated_receive_amount": "Geschat ontvangen bedrag",
+  "eta": "ETA",
   "etherscan_history": "Etherscan-geschiedenis",
   "event": "Evenement",
   "events": "Evenementen",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Kies een nieuwe vertegenwoordiger",
   "nanogpt_subtitle": "Alle nieuwste modellen (GPT-4, Claude). \\ Nno-abonnement, betalen met crypto.",
   "narrow": "Smal",
-  "new_tag": "Nieuw",
   "new_first_wallet_text": "Je crypto veilig houden is een fluitje van een cent",
   "new_node_testing": "Nieuwe knooppunttest",
   "new_subaddress_create": "Creëren",
   "new_subaddress_label_name": "Label naam",
   "new_subaddress_title": "Nieuw adres",
+  "new_tag": "Nieuw",
   "new_template": "Nieuwe sjabloon",
   "new_transactions_notifications": "Stuur meldingen over nieuwe transacties",
   "new_wallet": "Nieuwe portemonnee",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "SYNCHRONISATIE PROBEREN",
   "sync_status_connected": "VERBONDEN",
   "sync_status_connecting": "AANSLUITING",
+  "sync_status_display_mode": "Synchronisatiestatusweergave",
+  "sync_status_display_mode_blocks": "Toon blokken overgebleven",
+  "sync_status_display_mode_eta": "Toon ETA",
   "sync_status_failed_connect": "LOSGEKOPPELD",
   "sync_status_not_connected": "NIET VERBONDEN",
   "sync_status_starting_scan": "SCAN starten (van ${height})",
