--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -353,6 +353,7 @@
   "estimated": "ประมาณการ",
   "estimated_new_fee": "ค่าธรรมเนียมใหม่โดยประมาณ",
   "estimated_receive_amount": "โดยประมาณว่าจำนวนเงินที่ได้รับ",
+  "eta": "กทพ.",
   "etherscan_history": "ประวัติอีเธอร์สแกน",
   "event": "เหตุการณ์",
   "events": "กิจกรรม",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "เลือกตัวแทนใหม่",
   "nanogpt_subtitle": "รุ่นใหม่ล่าสุดทั้งหมด (GPT-4, Claude). การสมัครสมาชิก \\ nno, จ่ายด้วย crypto",
   "narrow": "แคบ",
-  "new_tag": "ใหม่",
   "new_first_wallet_text": "การรักษา crypto ของคุณให้ปลอดภัยเป็นเค้กชิ้นหนึ่ง",
   "new_node_testing": "การทดสอบโหนดใหม่",
   "new_subaddress_create": "สร้าง",
   "new_subaddress_label_name": "ชื่อป้ายกำกับ",
   "new_subaddress_title": "ที่อยู่ใหม่",
+  "new_tag": "ใหม่",
   "new_template": "แม่แบบใหม่",
   "new_transactions_notifications": "ส่งการแจ้งเตือนเกี่ยวกับธุรกรรมใหม่",
   "new_wallet": "กระเป๋าใหม่",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "พยายามซิงโครไนซ์",
   "sync_status_connected": "เชื่อมต่อแล้ว",
   "sync_status_connecting": "กำลังเชื่อมต่อ",
+  "sync_status_display_mode": "การแสดงสถานะซิงค์",
+  "sync_status_display_mode_blocks": "โชว์บล็อกที่เหลืออยู่",
+  "sync_status_display_mode_eta": "แสดง ETA",
   "sync_status_failed_connect": "การเชื่อมต่อล้มเหลว",
   "sync_status_not_connected": "ไม่ได้เชื่อมต่อ",
   "sync_status_starting_scan": "การสแกนเริ่มต้น (จาก ${height})",
