--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -353,6 +353,7 @@
   "estimated": "Tinatayang",
   "estimated_new_fee": "Tinatayang bagong fee",
   "estimated_receive_amount": "Tinatayang natanggap na halaga",
+  "eta": "Eta",
   "etherscan_history": "Kasaysayan ng Etherscan",
   "event": "Kaganapan",
   "events": "Mga kaganapan",
@@ -522,12 +523,12 @@
   "nano_pick_new_rep": "Pumili ng isang bagong representative",
   "nanogpt_subtitle": "Ang lahat ng mga pinakabagong modelo (GPT-4, Claude). \nNo subscription, magbayad gamit ang crypto.",
   "narrow": "Makitid",
-  "new_tag": "Bago",
   "new_first_wallet_text": "Ang pagpapanatiling ligtas sa iyong crypto ay isang piraso ng cake",
   "new_node_testing": "Bagong node testing",
   "new_subaddress_create": "Lumikha",
   "new_subaddress_label_name": "Pangalan ng label",
   "new_subaddress_title": "Bagong address",
+  "new_tag": "Bago",
   "new_template": "Bagong Template",
   "new_transactions_notifications": "Magpadala ng mga abiso tungkol sa mga bagong transaksyon",
   "new_wallet": "Bagong Wallet",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "SINUSUBUKANG I-SYNC",
   "sync_status_connected": "KONEKTADO",
   "sync_status_connecting": "KUMOKENEKTA",
+  "sync_status_display_mode": "Pagpapakita ng katayuan ng pag -sync",
+  "sync_status_display_mode_blocks": "Ipakita ang natitirang mga bloke",
+  "sync_status_display_mode_eta": "Ipakita ang Eta",
   "sync_status_failed_connect": "NADISKONEKTA",
   "sync_status_not_connected": "HINDI KONEKTADO",
   "sync_status_starting_scan": "Simula sa pag -scan (mula sa ${height})",
