--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -352,6 +352,7 @@
   "estimated": "Ước tính",
   "estimated_new_fee": "Phí mới ước tính",
   "estimated_receive_amount": "Số tiền nhận ước tính",
+  "eta": "Eta",
   "etherscan_history": "Lịch sử Etherscan",
   "event": "Sự kiện",
   "events": "Các sự kiện",
@@ -521,12 +522,12 @@
   "nano_pick_new_rep": "Chọn đại diện mới",
   "nanogpt_subtitle": "Tất cả các mẫu mới nhất (GPT-4, Claude).\\nKhông cần đăng ký, thanh toán bằng tiền điện tử.",
   "narrow": "Hẹp",
-  "new_tag": "Mới",
   "new_first_wallet_text": "Giữ tiền điện tử của bạn an toàn là một miếng bánh",
   "new_node_testing": "Đang thử nghiệm nút mới",
   "new_subaddress_create": "Tạo",
   "new_subaddress_label_name": "Tên nhãn",
   "new_subaddress_title": "Địa chỉ mới",
+  "new_tag": "Mới",
   "new_template": "Mẫu mới",
   "new_transactions_notifications": "Gửi thông báo về các giao dịch mới",
   "new_wallet": "Ví mới",
@@ -904,6 +905,9 @@
   "sync_status_attempting_sync": "ĐANG THỬ ĐỒNG BỘ",
   "sync_status_connected": "ĐÃ KẾT NỐI",
   "sync_status_connecting": "ĐANG KẾT NỐI",
+  "sync_status_display_mode": "Hiển thị trạng thái đồng bộ hóa",
+  "sync_status_display_mode_blocks": "Hiển thị các khối còn lại",
+  "sync_status_display_mode_eta": "Hiển thị ETA",
   "sync_status_failed_connect": "ĐÃ NGẮT KẾT NỐI",
   "sync_status_not_connected": "CHƯA KẾT NỐI",
   "sync_status_starting_scan": "ĐANG BẮT ĐẦU QUÉT (${height})",
