--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -354,6 +354,7 @@
   "estimated": "Ó tó a fojú díwọ̀n",
   "estimated_new_fee": "Ifoju tuntun owo tuntun",
   "estimated_receive_amount": "Ifoju gba iye",
+  "eta": "Eta",
   "etherscan_history": "Etherscan itan",
   "event": "Iṣẹlẹ",
   "events": "Awọn iṣẹlẹ",
@@ -523,12 +524,12 @@
   "nano_pick_new_rep": "Mu aṣoju tuntun kan",
   "nanogpt_subtitle": "Gbogbo awọn awoṣe tuntun (GPT-4, Claude). \\ Nno alabapin kan, sanwo pẹlu Crypto.",
   "narrow": "Taara",
-  "new_tag": "Tuntun",
   "new_first_wallet_text": "Tọju ẹrọ ti o ni aabo rẹ jẹ nkan ti akara oyinbo kan",
   "new_node_testing": "A ń dán apẹka títun wò",
   "new_subaddress_create": "Ṣe é",
   "new_subaddress_label_name": "Orúkọ",
   "new_subaddress_title": "Àdírẹ́sì títun",
+  "new_tag": "Tuntun",
   "new_template": "Àwòṣe títun",
   "new_transactions_notifications": "Firanṣẹ awọn iwifunni nipa awọn iṣowo tuntun",
   "new_wallet": "Àpamọ́wọ́ títun",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "Ń GBÌYÀNJÚ MÚDỌ́GBA",
   "sync_status_connected": "TI DÁRAPỌ̀ MỌ́",
   "sync_status_connecting": "Ń DÁRAPỌ̀ MỌ́",
+  "sync_status_display_mode": "Sync Ifihan Ipo",
+  "sync_status_display_mode_blocks": "Ṣafihan awọn bulọọki ti o ku",
+  "sync_status_display_mode_eta": "Fihan efa",
   "sync_status_failed_connect": "ÌKÀNPỌ̀ TI KÚ",
   "sync_status_not_connected": "KÒ TI DÁRAPỌ̀ MỌ́ Ọ",
   "sync_status_starting_scan": "Ibẹrẹ ọlọjẹ (lati ${height})",
