feat: add warning for sending to contract addresses

--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -20,8 +20,9 @@
   "add_receiver": "เพิ่มผู้รับอื่น ๆ (ตัวเลือก)",
   "add_secret_code": "หรือเพิ่มรหัสลับนี้ลงในแอปตรวจสอบความถูกต้อง",
   "add_tip": "เพิ่มคำแนะนำ",
+  "add_token": "เพิ่มโทเค็น",
   "add_token_disclaimer_check": "ฉันได้ยืนยันที่อยู่และข้อมูลของสัญญาโทเค็นโดยใช้แหล่งข้อมูลที่เชื่อถือได้ การเพิ่มข้อมูลที่เป็นอันตรายหรือไม่ถูกต้องอาจทำให้สูญเสียเงินได้",
-  "add_token_warning": "ห้ามแก้ไขหรือเพิ่มโทเค็นตามคำแนะนำของนักต้มตุ๋น\nยืนยันที่อยู่โทเค็นกับแหล่งที่มาที่เชื่อถือได้เสมอ!",
+  "add_token_warning": "ห้ามแก้ไขหรือเพิ่มโทเค็นตามคำแนะนำของนักต้มตุ๋น ยืนยันที่อยู่โทเค็นกับแหล่งที่มาที่เชื่อถือได้เสมอ!",
   "add_value": "เพิ่มมูลค่า",
   "added_message_for_ata_error": "กรุณาตรวจสอบให้แน่ใจว่าคุณมียอดคงเหลือโซลเพียงพอที่จะทำธุรกรรมให้เสร็จสมบูรณ์",
   "address": "ที่อยู่",
@@ -200,6 +201,7 @@
   "contact_name_exists": "มีผู้ติดต่อชื่อนั้นอยู่แล้ว โปรดเลือกชื่ออื่น",
   "contact_support": "ติดต่อฝ่ายสนับสนุน",
   "continue_text": "ดำเนินการต่อ",
+  "contract_address": "ที่อยู่สัญญา",
   "contract_warning": "ที่อยู่สัญญานี้ได้รับการตั้งค่าสถานะว่าเป็นการฉ้อโกง กรุณาดำเนินการด้วยความระมัดระวัง",
   "contractName": "ชื่อสัญญา",
   "contractSymbol": "สัญลักษณ์สัญญา",
@@ -640,6 +642,7 @@
   "purchase_gift_card": "ซื้อบัตรของขวัญ",
   "purple_dark_theme": "ธีมสีม่วงเข้ม",
   "qr_fullscreen": "แตะเพื่อเปิดหน้าจอ QR code แบบเต็มจอ",
+  "qr_instruction": "ใช้ที่อยู่นี้เพื่อรับโทเค็นหรือของสะสม",
   "qr_payment_amount": "QR code นี้มีจำนวนการชำระเงิน คุณต้องการเขียนทับค่าปัจจุบันหรือไม่?",
   "quantity": "ปริมาณ",
   "question_to_disable_2fa": "คุณแน่ใจหรือไม่ว่าต้องการปิดการใช้งาน Cake 2FA ไม่จำเป็นต้องใช้รหัส 2FA ในการเข้าถึงกระเป๋าเงินและฟังก์ชั่นบางอย่างอีกต่อไป",
@@ -934,11 +937,11 @@
   "to": "ถึง",
   "today": "วันนี้",
   "token_already_exists": "โทเค็นมีอยู่แล้ว",
-  "token_contract_address": "ที่อยู่สัญญาโทเค็น",
-  "token_decimal": "โทเค็นทศนิยม",
-  "token_name": "ชื่อโทเค็น เช่น Tether",
-  "token_symbol": "สัญลักษณ์โทเค็น เช่น USDT",
+  "token_decimal": "โทเค็นทศนิยม (EG: USDT )",
+  "token_name": "ชื่อโทเค็น (EG: Tether )",
+  "token_symbol": "สัญลักษณ์โทเค็น (EG: USDT )",
   "tokenID": "บัตรประจำตัวประชาชน",
+  "tokens_strong_warning": "อย่าส่งโทเค็นไปยังที่อยู่นี้ !",
   "tor_connection": "การเชื่อมต่อทอร์",
   "tor_connection_timeout": "หมดเวลาเชื่อมต่อ tor",
   "tor_experimental": "นี่เป็นคุณสมบัติการทดลองไม่ใช่การเชื่อมต่อทั้งหมดที่ทำจากการรองรับเค้กกระเป๋าเงิน TOR การกำหนดเส้นทาง - การเชื่อมต่อบางอย่างอาจใช้ Clearnet เพื่อกำหนดเส้นทางการจราจรแอพใช้ TOR ด้วยโหมด VPN",
@@ -1130,5 +1133,6 @@
   "you_will_receive_estimated_amount": "คุณจะได้รับ(โดยประมาณ )",
   "you_will_send": "แปลงจาก",
   "youCanGoBackToYourDapp": "คุณสามารถกลับไปที่ dapp ของคุณได้ทันที",
+  "your": "ของคุณ",
   "yy": "ปี"
 }
