--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -20,8 +20,9 @@
   "add_receiver": "دوسرا وصول کنندہ شامل کریں (اختیاری)",
   "add_secret_code": "                             ۔ﮟﯾﺮﮐ ﻞﻣﺎﺷ ﮟﯿﻣ ﭗﯾﺍ ﮦﺪﻨﻨﮐ ﻖﯾﺪﺼﺗ ﻮﮐ ﮈﻮﮐ ﮧﯿﻔﺧ ﺱﺍ ،ﺎﯾ",
   "add_tip": "ٹپ شامل کریں۔",
+  "add_token": "ٹوکن شامل کریں",
   "add_token_disclaimer_check": "میں نے ایک معتبر ذریعہ کا استعمال کرتے ہوئے ٹوکن کنٹریکٹ ایڈریس اور معلومات کی تصدیق کی ہے۔ بدنیتی پر مبنی یا غلط معلومات شامل کرنے کے نتیجے میں فنڈز ضائع ہو سکتے ہیں۔",
-  "add_token_warning": "سکیمرز کی ہدایت کے مطابق ٹوکن میں ترمیم یا اضافہ نہ کریں۔\nہمیشہ معتبر ذرائع سے ٹوکن پتوں کی تصدیق کریں!",
+  "add_token_warning": "سکیمرز کی ہدایت کے مطابق ٹوکن میں ترمیم یا اضافہ نہ کریں۔ ہمیشہ معتبر ذرائع سے ٹوکن پتوں کی تصدیق کریں!",
   "add_value": "قدر شامل کریں۔",
   "added_message_for_ata_error": "برائے مہربانی اس بات کو یقینی بنائیں کہ آپ کے لین دین کو مکمل کرنے کے ل enough آپ کے پاس کافی SOL توازن موجود ہے۔",
   "address": "ﮧﺘﭘ",
@@ -200,6 +201,7 @@
   "contact_name_exists": " ۔ﮟﯾﺮﮐ ﺐﺨﺘﻨﻣ ﻡﺎﻧ ﻒﻠﺘﺨﻣ ﮏﯾﺍ ﻡﺮﮐ ﮦﺍﺮﺑ ۔ﮯﮨ ﺩﻮﺟﻮﻣ ﮯﺳ ﮯﻠﮩﭘ ﮧﻄﺑﺍﺭ ﮏﯾﺍ ﮫﺗﺎﺳ ﮯﮐ ﻡﺎﻧ ﺱﺍ",
   "contact_support": "سپورٹ سے رابطہ کریں۔",
   "continue_text": "جاری رہے",
+  "contract_address": "معاہدہ کا پتہ",
   "contract_warning": "اس معاہدے کے پتے کو ممکنہ طور پر جعلی قرار دیا گیا ہے۔ براہ کرم احتیاط کے ساتھ آگے بڑھیں۔",
   "contractName": "ﻡﺎﻧ ﺎﮐ ﮦﺪﮨﺎﻌﻣ",
   "contractSymbol": "ﺖﻣﻼ﻿ﻋ ﯽﮐ ﮦﺪﮨﺎﻌﻣ",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "گفٹ کارڈ خریدیں۔",
   "purple_dark_theme": "ارغوانی ڈارک تھیم",
   "qr_fullscreen": "فل سکرین QR کوڈ کھولنے کے لیے تھپتھپائیں۔",
+  "qr_instruction": "اس پتے کو کسی بھی ٹوکن یا اجتماعی وصول کرنے کے لئے استعمال کریں",
   "qr_payment_amount": "اس QR کوڈ میں ادائیگی کی رقم شامل ہے۔ کیا آپ موجودہ قدر کو اوور رائٹ کرنا چاہتے ہیں؟",
   "quantity": "مقدار",
   "question_to_disable_2fa": "کیا آپ واقعی کیک 2FA کو غیر فعال کرنا چاہتے ہیں؟ بٹوے اور بعض افعال تک رسائی کے لیے اب 2FA کوڈ کی ضرورت نہیں ہوگی۔",
@@ -936,11 +939,11 @@
   "to": "to",
   "today": "آج",
   "token_already_exists": "ٹوکن پہلے ہی موجود ہے",
-  "token_contract_address": "ٹوکن کنٹریکٹ ایڈریس",
-  "token_decimal": "ٹوکن اعشاریہ",
-  "token_name": "ٹوکن کا نام جیسے: Tether",
-  "token_symbol": "ٹوکن کی علامت جیسے: USDT",
+  "token_decimal": "ٹوکن اعشاریہ (eg: USDT )",
+  "token_name": "ٹوکن نام (eg: tether )",
+  "token_symbol": "ٹوکن کی علامت (eg: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "کبھی بھی اس پتے پر ٹوکن نہ بھیجیں !",
   "tor_connection": "ﻦﺸﮑﻨﮐ ﺭﻮﭨ",
   "tor_connection_timeout": "ٹور کنکشن ٹائم آؤٹ",
   "tor_experimental": "یہ ایک تجرباتی خصوصیت ہے ، کیک پرس پرس سپورٹ ٹور روٹنگ سے بنے تمام رابطے نہیں - کچھ رابطے کلینیٹ کا استعمال کرسکتے ہیں ، تاکہ مکمل طور پر ایپ ٹریفک کو VPN وضع کے ساتھ ٹور کا استعمال کریں۔",
@@ -1132,5 +1135,6 @@
   "you_will_receive_estimated_amount": "آپ(تخمینہ ) وصول کریں گے",
   "you_will_send": "سے تبدیل کریں۔",
   "youCanGoBackToYourDapp": "اب آپ اپنے ڈی اے پی پی پر واپس جاسکتے ہیں",
+  "your": "آپ کا",
   "yy": "YY"
 }
