--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Fikún àdírẹ́sì mìíràn (ìyàn nìyí)",
   "add_secret_code": "Tabi, ṣafikun koodu aṣiri yii si ohun elo onijeri kan",
   "add_tip": "Fún owó àfikún",
+  "add_token": "Ṣafikun Twen",
   "add_token_disclaimer_check": "Mo ti jẹrisi adirẹsi adehun ami ati alaye nipa lilo orisun olokiki kan. Fifi irira tabi alaye ti ko tọ le ja si isonu ti owo.",
-  "add_token_warning": "Ma ṣe ṣatunkọ tabi ṣafikun awọn ami bi a ti fun ni aṣẹ nipasẹ awọn scammers.\nNigbagbogbo jẹrisi awọn adirẹsi ami pẹlu awọn orisun olokiki!",
+  "add_token_warning": "Ma ṣe ṣatunkọ tabi ṣafikun awọn ami bi a ti fun ni aṣẹ nipasẹ awọn scammers. Nigbagbogbo jẹrisi awọn adirẹsi ami pẹlu awọn orisun olokiki!",
   "add_value": "Fikún owó",
   "added_message_for_ata_error": "Daradara rii daju pe o ni iwọntunwọnsi Sol Sol lati pari iṣowo rẹ.",
   "address": "Adirẹsi",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Olubasọrọ pẹlu orukọ yẹn ti wa tẹlẹ. Jọwọ yan orukọ ti o yatọ.",
   "contact_support": "Bá ìranlọ́wọ́ sọ̀rọ̀",
   "continue_text": "Tẹ̀síwájú",
+  "contract_address": "Adirẹsi adehun",
   "contract_warning": "Adirẹsi adehun adehun yii ti samisi bi arekereke. Jọwọ tẹsiwaju pẹlu iṣọra.",
   "contractName": "Orukọ adehun",
   "contractSymbol": "Aami adehun",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "Ra káàdì ìrajà t'á lò nínú irú kan ìtajà",
   "purple_dark_theme": "Akọle dudu dudu",
   "qr_fullscreen": "Àmì ìlujá túbọ̀ máa tóbi tí o bá tẹ̀",
+  "qr_instruction": "Lo adirẹsi yii lati gba eyikeyi ami-ọmọ tabi gbigba lori",
   "qr_payment_amount": "Iye owó t'á ránṣé wà nínú àmì ìlujá yìí. Ṣé ẹ fẹ́ pààrọ̀ ẹ̀?",
   "quantity": "Ọpọ",
   "question_to_disable_2fa": "Ṣe o wa daadaa pe o fẹ ko 2FA Cake? Ko si itumọ ti a yoo nilo lati ranse si iwe iwe naa ati eyikeyi iṣẹ ti o ni.",
@@ -935,11 +938,11 @@
   "to": "Si",
   "today": "Lénìí",
   "token_already_exists": "Token tẹlẹ wa",
-  "token_contract_address": "Àmi guide adirẹsi",
-  "token_decimal": "Àmi eleemewa",
-  "token_name": "Orukọ àmi fun apẹẹrẹ: Tether",
-  "token_symbol": "Aami aami fun apẹẹrẹ: USDT",
+  "token_decimal": "Token Dememal (Eg: USDT )",
+  "token_name": "Orukọ siken (Eg: Tetri )",
+  "token_symbol": "Ami ami (G: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Maṣe fi awọn ami-ami ranṣẹ si adirẹsi yii !",
   "tor_connection": "Tor asopọ",
   "tor_connection_timeout": "Akoko asopọ asopọ",
   "tor_experimental": "Eyi jẹ ẹya ti esiperimenta ti a ṣe lati awọn Awoṣe Adwat atilẹyin ti o wa ni atilẹyin idiwọ - diẹ ninu awọn asopọ le lo imple, lati le ni ipa ọna App Prat pẹlu ipo VPN.",
@@ -1131,5 +1134,6 @@
   "you_will_receive_estimated_amount": "Iwọ yoo gba ( excimated )",
   "you_will_send": "Ṣe pàṣípààrọ̀ láti",
   "youCanGoBackToYourDapp": "O le pada si tapla rẹ bayi",
+  "your": "Rẹ",
   "yy": "Ọd"
 }
