--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Přidat dalšího příjemce (nepovinné)",
   "add_secret_code": "Nebo přidejte tento tajný kód do ověřovací aplikace",
   "add_tip": "Přidat spropitné",
+  "add_token": "Přidejte token",
   "add_token_disclaimer_check": "Potvrdil jsem adresu a informace smlouvy o tokenu pomocí důvěryhodného zdroje. Přidání škodlivých nebo nesprávných informací může vést ke ztrátě finančních prostředků.",
-  "add_token_warning": "Neupravujte ani nepřidávejte tokeny podle pokynů podvodníků.\nVždy potvrďte adresy tokenů s renomovanými zdroji!",
+  "add_token_warning": "Neupravujte ani nepřidávejte tokeny podle pokynů podvodníků. Vždy potvrďte adresy tokenů s renomovanými zdroji!",
   "add_value": "Přidat hodnotu",
   "added_message_for_ata_error": "Laskavě se ujistěte, že máte dostatek rovnováhy SOL, abyste dokončili transakci.",
   "address": "Adresa",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Kontakt s tímto jménem již existuje. Vyberte prosím jiný název.",
   "contact_support": "Kontaktovat podporu",
   "continue_text": "Pokračovat",
+  "contract_address": "Adresa smlouvy",
   "contract_warning": "Tato adresa smlouvy byla označena jako potenciálně podvodná. Pokračujte opatrně.",
   "contractName": "Název smlouvy",
   "contractSymbol": "Symbol smlouvy",
@@ -640,6 +642,7 @@
   "purchase_gift_card": "Objednat dárkovou kartu",
   "purple_dark_theme": "Fialové temné téma",
   "qr_fullscreen": "Poklepáním otevřete QR kód na celé obrazovce",
+  "qr_instruction": "Tuto adresu použijte k získání jakéhokoli tokenu nebo sběratelského sběratele",
   "qr_payment_amount": "Tento QR kód obsahuje i částku. Chcete přepsat současnou hodnotu?",
   "quantity": "Množství",
   "question_to_disable_2fa": "Opravdu chcete deaktivovat Cake 2FA? Pro přístup k peněžence a některým funkcím již nebude potřeba kód 2FA.",
@@ -934,11 +937,11 @@
   "to": "Na",
   "today": "Dnes",
   "token_already_exists": "Token již existuje",
-  "token_contract_address": "Adresa tokenové smlouvy",
-  "token_decimal": "Token v desítkové soustavě",
-  "token_name": "Název tokenu např.: Tether",
-  "token_symbol": "Symbol tokenu, např.: USDT",
+  "token_decimal": "Decimal (eg: USDT )",
+  "token_name": "Token Name (EG: Tether )",
+  "token_symbol": "Symbol tokenů (EG: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Nikdy neposílejte tokeny na tuto adresu !",
   "tor_connection": "Připojení Tor",
   "tor_connection_timeout": "Časový limit připojení",
   "tor_experimental": "Jedná se o experimentální funkci, ne všechna připojení vyrobená z podpory dortů na dort Tor - některá připojení mohou používat ClearNet, aby se plně směrovaly používání provozu aplikací s režimem VPN.",
@@ -1130,5 +1133,6 @@
   "you_will_receive_estimated_amount": "Obdržíte(odhadovaný )",
   "you_will_send": "Směnit z",
   "youCanGoBackToYourDapp": "Nyní se můžete vrátit do svého dappu",
+  "your": "Vaše",
   "yy": "YY"
 }
