--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Fügen Sie einen weiteren Empfänger hinzu (optional)",
   "add_secret_code": "Oder fügen Sie diesen Geheimcode einer Authentifizierungs-App hinzu",
   "add_tip": "Tipp hinzufügen",
+  "add_token": "Token hinzufügen",
   "add_token_disclaimer_check": "Ich habe die Adresse und Informationen zum Token-Contract anhand einer seriösen Quelle bestätigt. Das Hinzufügen böswilliger oder falscher Informationen kann zu einem Verlust von Geldern führen.",
-  "add_token_warning": "Bearbeiten oder fügen Sie Token nicht gemäß den Anweisungen von Betrügern hinzu.\nBestätigen Sie Token-Adressen immer mit seriösen Quellen!",
+  "add_token_warning": "Bearbeiten oder fügen Sie Token nicht gemäß den Anweisungen von Betrügern hinzu. Bestätigen Sie Token-Adressen immer mit seriösen Quellen!",
   "add_value": "Wert hinzufügen",
   "added_message_for_ata_error": "Bitte stellen Sie sicher, dass Sie über genügend SOL -Balance verfügen, um Ihre Transaktion abzuschließen.",
   "address": "Adresse",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Ein Kontakt mit diesem Namen besteht bereits. Bitte wählen Sie einen anderen Namen.",
   "contact_support": "Support kontaktieren",
   "continue_text": "Weiter",
+  "contract_address": "Vertragsadresse",
   "contract_warning": "Diese Vertragsadresse wurde als potenziell betrügerisch gekennzeichnet. Bitte gehen Sie mit Vorsicht vor.",
   "contractName": "Contract-Name",
   "contractSymbol": "Contract-Symbol",
@@ -641,6 +643,7 @@
   "purchase_gift_card": "Geschenkkarte kaufen",
   "purple_dark_theme": "Lila dunkle Thema",
   "qr_fullscreen": "Tippen Sie hier, um den QR-Code im Vollbildmodus zu öffnen",
+  "qr_instruction": "Verwenden Sie diese Adresse, um ein Token oder ein Sammlerstück zu erhalten",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Menge",
   "question_to_disable_2fa": "Sind Sie sicher, dass Sie Cake 2FA deaktivieren möchten? Für den Zugriff auf die Wallet und bestimmte Funktionen wird kein 2FA-Code mehr benötigt.",
@@ -935,11 +938,11 @@
   "to": "Zu",
   "today": "Heute",
   "token_already_exists": "Token existiert bereits",
-  "token_contract_address": "Token-Contract-Adresse",
-  "token_decimal": "Token-Dezimalzahl",
-  "token_name": "Token-Name, z. B.: Tether",
-  "token_symbol": "Token-Symbol, z. B.: USDT",
+  "token_decimal": "Token Decimal (EG: USDT )",
+  "token_name": "Token Name (EG: Tether )",
+  "token_symbol": "Token Symbol (EG: USDT )",
   "tokenID": "AUSWEIS",
+  "tokens_strong_warning": "Senden Sie niemals Token an diese Adresse !",
   "tor_connection": "Tor-Verbindung",
   "tor_connection_timeout": "TOR -Verbindungs ​​-Zeitüberschreitung",
   "tor_experimental": "Dies ist eine experimentelle Funktion, nicht alle Verbindungen, die aus Kuchen -Wallet -Stütze für die Routing hergestellt werden. Einige Verbindungen können ClearNET verwenden, um den App -Traffic -App -TOR mit dem VPN -Modus vollständig zu verwenden.",
@@ -1133,5 +1136,6 @@
   "you_will_receive_estimated_amount": "Sie erhalten(geschätzt )",
   "you_will_send": "Konvertieren von",
   "youCanGoBackToYourDapp": "Sie können jetzt zu Ihrem Dapp zurückkehren",
+  "your": "Dein",
   "yy": "YY"
 }
