--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Ƙara wani mai karɓa (na zaɓi)",
   "add_secret_code": "Ko, ƙara wannan lambar sirrin zuwa ƙa'idar mai tabbatarwa",
   "add_tip": "Ƙara Tukwici",
+  "add_token": "Sanya Shoken",
   "add_token_disclaimer_check": "Na tabbatar da adireshin kwangilar alamar da bayanin ta amfani da ingantaccen tushe. Ƙara bayanan ƙeta ko kuskure na iya haifar da asarar kuɗi.",
-  "add_token_warning": "Kar a gyara ko ƙara alamu kamar yadda masu zamba suka umarta.\nKoyaushe tabbatar da adiresoshin alamar tare da sanannun tushe!",
+  "add_token_warning": "Kar a gyara ko ƙara alamu kamar yadda masu zamba suka umarta. Koyaushe tabbatar da adiresoshin alamar tare da sanannun tushe!",
   "add_value": "Ƙara ƙima",
   "added_message_for_ata_error": "Da kyau tabbatar kana da isasshen so su daidaita don kammala ma'amalar ku.",
   "address": "Adireshi",
@@ -200,6 +201,7 @@
   "contact_name_exists": "An riga an sami lamba tare da wannan sunan. Da fatan za a zaɓi suna daban.",
   "contact_support": "Tuntuɓi Support",
   "continue_text": "Ci gaba",
+  "contract_address": "Adireshin kwangila",
   "contract_warning": "An kafa wannan adireshin kwantaragin kwangilar yayin da yuwuwar zamba. Da fatan za a ci gaba da taka tsantsan.",
   "contractName": "Sunan Kwangila",
   "contractSymbol": "Alamar Kwangila",
@@ -642,6 +644,7 @@
   "purchase_gift_card": "Katin Kyautar Sayi",
   "purple_dark_theme": "M duhu jigo",
   "qr_fullscreen": "Matsa don buɗe lambar QR na cikakken allo",
+  "qr_instruction": "Yi amfani da wannan adireshin don karɓar kowane alama ko tattarawa",
   "qr_payment_amount": "Wannan QR code yana da adadin kuɗi. Kuna so ku overwrite wannan adadi?",
   "quantity": "Yawa",
   "question_to_disable_2fa": "Ka tabbata cewa kana son kashe cake 2fa? Ba za a sake buƙatar lambar 2FA ba don samun damar yin walat da takamaiman ayyuka.",
@@ -936,11 +939,11 @@
   "to": "Zuwa",
   "today": "Yau",
   "token_already_exists": "Alama an riga an wanzu",
-  "token_contract_address": "Adireshin kwangilar Token",
-  "token_decimal": "Alamar ƙima",
-  "token_name": "Alamar sunan misali: Tether",
-  "token_symbol": "Alamar alama misali: USDT",
+  "token_decimal": "Alen Devimal (Eg: USDT )",
+  "token_name": "NAMIJI (EG: Tether )",
+  "token_symbol": "Alamar alama (Eg: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Karka taba aika alamomi zuwa wannan adireshin !",
   "tor_connection": "Tor haɗin gwiwa",
   "tor_connection_timeout": "A lokacin Tor Haɗin",
   "tor_experimental": "Wannan fasalin gwaji ne, ba duk haɗin da aka yi ba daga Wall Wall Wall Walling goyon baya Tor Routing - don cikakken amfani da hanyar zirga-zirga amfani da tor tare da yanayin vpn.",
@@ -1133,5 +1136,6 @@
   "you_will_receive_estimated_amount": "Za ku (karɓi )",
   "you_will_send": "Maida daga",
   "youCanGoBackToYourDapp": "Kuna iya komawa zuwa DPP ɗinku yanzu",
+  "your": "Naku",
   "yy": "YY"
 }
