--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Dodajte drugi prijemnik (izborno)",
   "add_secret_code": "Ili dodajte ovaj tajni kod u aplikaciju za autentifikaciju",
   "add_tip": "Dodaj savjet",
+  "add_token": "Dodaj token",
   "add_token_disclaimer_check": "Potvrdio sam adresu i informacije o ugovoru o tokenu koristeći ugledni izvor. Dodavanje zlonamjernih ili netočnih informacija može dovesti do gubitka sredstava.",
-  "add_token_warning": "Nemojte uređivati niti dodavati tokene prema uputama prevaranata.\nUvijek potvrdite adrese tokena s uglednim izvorima!",
+  "add_token_warning": "Nemojte uređivati niti dodavati tokene prema uputama prevaranata. Uvijek potvrdite adrese tokena s uglednim izvorima!",
   "add_value": "Dodaj vrijednost",
   "added_message_for_ata_error": "Ljubazno osigurajte da imate dovoljno salda SOL -a da dovršite svoju transakciju.",
   "address": "Adresa",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Kontakt s tim imenom već postoji. Odaberite drugo ime.",
   "contact_support": "Kontaktirajte podršku",
   "continue_text": "Nastavak",
+  "contract_address": "Adresa ugovora",
   "contract_warning": "Ova adresa ugovora označena je kao potencijalno lažna. Molimo nastavite s oprezom.",
   "contractName": "Naziv ugovora",
   "contractSymbol": "Simbol ugovora",
@@ -640,6 +642,7 @@
   "purchase_gift_card": "Kupnja darovne kartice",
   "purple_dark_theme": "Ljubičasta tamna tema",
   "qr_fullscreen": "Dodirnite za otvaranje QR koda preko cijelog zaslona",
+  "qr_instruction": "Upotrijebite ovu adresu da biste dobili bilo koji token ili kolekcionar na",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Količina",
   "question_to_disable_2fa": "Jeste li sigurni da želite onemogućiti Cake 2FA? 2FA kod više neće biti potreban za pristup novčaniku i određenim funkcijama.",
@@ -934,11 +937,11 @@
   "to": "Do",
   "today": "Danas",
   "token_already_exists": "Token već postoji",
-  "token_contract_address": "Adresa ugovora tokena",
-  "token_decimal": "Token decimalni",
-  "token_name": "Naziv tokena npr.: Tether",
-  "token_symbol": "Simbol tokena npr.: USDT",
+  "token_decimal": "Token Decimal (EG: USDT )",
+  "token_name": "Naziv tokena (EG: Tether )",
+  "token_symbol": "Token simbol (EG: USDT )",
   "tokenID": "iskaznica",
+  "tokens_strong_warning": "Nikada nemojte slati tokene na ovu adresu !",
   "tor_connection": "Tor veza",
   "tor_connection_timeout": "TOR TIMPOUCEN",
   "tor_experimental": "Ovo je eksperimentalna značajka, nisu sve veze napravljene od podrške za kolače za torte - neke veze mogu koristiti ClearNet, kako bi se u potpunosti usmjerio na APP promet s TOR -om s VPN načinom rada.",
@@ -1130,5 +1133,6 @@
   "you_will_receive_estimated_amount": "Primit ćete(procijenjeno )",
   "you_will_send": "Razmijeni iz",
   "youCanGoBackToYourDapp": "Sada se možete vratiti na svoj dapp",
+  "your": "Vaš",
   "yy": "GG"
 }
