--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -20,8 +20,9 @@
   "add_receiver": "Додати одержувача (необов'язково)",
   "add_secret_code": "Або додайте цей секретний код до програми автентифікації",
   "add_tip": "Додати підказку",
+  "add_token": "Додати маркер",
   "add_token_disclaimer_check": "Я підтвердив адресу та інформацію щодо договору маркера, використовуючи авторитетне джерело. Додавання зловмисної або невірної інформації може призвести до втрати коштів.",
-  "add_token_warning": "Не редагуйте та не додавайте токени за вказівками шахраїв.\nЗавжди підтверджуйте адреси токенів у авторитетних джерелах!",
+  "add_token_warning": "Не редагуйте та не додавайте токени за вказівками шахраїв. Завжди підтверджуйте адреси токенів у авторитетних джерелах!",
   "add_value": "Додати значення",
   "added_message_for_ata_error": "Будь ласка, переконайтеся, що у вас є достатньо балансу SOL, щоб завершити свою транзакцію.",
   "address": "Адреса",
@@ -200,6 +201,7 @@
   "contact_name_exists": "Контакт із такою назвою вже існує. Виберіть інше ім'я.",
   "contact_support": "Звернутися до служби підтримки",
   "continue_text": "Продовжити",
+  "contract_address": "Адреса договору",
   "contract_warning": "Ця адреса контракту була позначена як потенційно шахрайська. Будь ласка, продовжуйте обережно.",
   "contractName": "Назва контракту",
   "contractSymbol": "Контракт символ",
@@ -640,6 +642,7 @@
   "purchase_gift_card": "Придбати подарункову картку",
   "purple_dark_theme": "Фіолетова темна тема",
   "qr_fullscreen": "Торкніться, щоб відкрити QR-код на весь екран",
+  "qr_instruction": "Використовуйте цю адресу, щоб отримати будь -який маркер або колекціонування",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
   "quantity": "Кількість",
   "question_to_disable_2fa": "Ви впевнені, що хочете вимкнути Cake 2FA? Код 2FA більше не потрібен для доступу до гаманця та певних функцій.",
@@ -935,11 +938,11 @@
   "to": "До",
   "today": "Сьогодні",
   "token_already_exists": "Маркер вже існує",
-  "token_contract_address": "Адреса договору маркера",
-  "token_decimal": "Токен десятковий",
-  "token_name": "Назва токена, наприклад: Tether",
-  "token_symbol": "Символ маркера, наприклад: USDT",
+  "token_decimal": "Token Decimal (EG: USDT )",
+  "token_name": "Назва маркера (EG: Tether )",
+  "token_symbol": "Символ маркера (EG: USDT )",
   "tokenID": "ID",
+  "tokens_strong_warning": "Ніколи не надсилайте жетони на цю адресу !",
   "tor_connection": "Підключення Tor",
   "tor_connection_timeout": "Тайм -аут підключення TOR",
   "tor_experimental": "Це експериментальна функція, не всі з'єднання, зроблені з підтримки тортів, що підтримують маршрутизацію - деякі з'єднання можуть використовувати Clearnet, щоб повністю маршрутизувати трафік додатків, використовуючи TOR з режимом VPN.",
@@ -1131,5 +1134,6 @@
   "you_will_receive_estimated_amount": "Ви отримаєте(оцінюється )",
   "you_will_send": "Конвертувати з",
   "youCanGoBackToYourDapp": "Ви можете повернутися до свого DAPP зараз",
+  "your": "Ваш",
   "yy": "YY"
 }
